--- a/src/components/Science/SciencePage.module.scss
+++ b/src/components/Science/SciencePage.module.scss
@@ -4,6 +4,7 @@
   overflow-x: hidden;
   background: #08080a;
   color: #f5f2f0;
+  padding-top: 88px;
 }
 
 .intro {
